unpackaged/main/default/objects/pse__Billing_Queue__c/pse__Billing_Queue__c.object-meta.xml
<CustomObject>
    <label>Billing Queue</label>
    <nameField>
        <displayFormat>BQ-{000000}</displayFormat>
        <label>Billing Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>