unpackaged/main/default/objects/pse__Billing_Queue__c/fields/pse__Business_Record__c.field-meta.xml
<CustomField>
    <fullName>pse__Business_Record__c</fullName>
    <formula>pse__Budget__r.Name +
pse__Expense__r.Name +
pse__Milestone__r.Name + 
pse__Miscellaneous_Adjustment__r.Name +
pse__Timecard__r.pse__Timecard_Header__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Record</label>
    <type>Text</type>
</CustomField>