unpackaged/main/default/objects/pse__Billing_Queue__c/fields/pse__Expense__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>pse__Expense__c</referenceTo>
    <relationshipLabel>Billing Queues</relationshipLabel>
    <relationshipName>Billing_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>