unpackaged/main/default/objects/pse__Billing_Queue__c/fields/pse__Transaction__c.field-meta.xml
<CustomField>
    <fullName>pse__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>pse__Transaction__c</referenceTo>
    <relationshipLabel>Billing Queues</relationshipLabel>
    <relationshipName>Billing_Queues</relationshipName>
    <type>Lookup</type>
</CustomField>